force-app/main/default/objects/Property__c/fields/Booking_Ratings_Count__c.field-meta.xml
<CustomField>
    <fullName>Booking_Ratings_Count__c</fullName>
    <label>Booking Ratings Count</label>
    <summaryForeignKey>Booking__c.Property__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>