force-app/main/default/objects/Property__c/fields/Booking_Ratings_Sum__c.field-meta.xml
<CustomField>
    <fullName>Booking_Ratings_Sum__c</fullName>
    <label>Booking Ratings Sum</label>
    <summarizedField>Booking__c.Guest_Rating__c</summarizedField>
    <summaryForeignKey>Booking__c.Property__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>