force-app/main/default/objects/Property__c/fields/Host__c.field-meta.xml
<CustomField>
    <fullName>Host__c</fullName>
    <label>Host</label>
    <referenceTo>Host__c</referenceTo>
    <relationshipLabel>Properties</relationshipLabel>
    <relationshipName>Properties</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>