force-app/main/default/objects/Property__c/fields/Property_ID__c.field-meta.xml
<CustomField>
    <fullName>Property_ID__c</fullName>
    <displayFormat>P-{0000}</displayFormat>
    <label>Property ID</label>
    <type>AutoNumber</type>
</CustomField>