force-app/main/default/objects/Property__c/fields/Rent_Type__c.field-meta.xml
<CustomField>
    <fullName>Rent_Type__c</fullName>
    <label>Rent Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Per Night</fullName>
            </value>
            <value>
                <fullName>Per Month</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>