force-app/main/default/objects/Property__c/validationRules/Amount_GreaterThan_0.validationRule-meta.xml
<ValidationRule>
    <fullName>Amount_GreaterThan_0</fullName>
    <active>true</active>
    <description>The amount to paid must be greater than zero.</description>
    <errorConditionFormula>Rent__c  &lt;= 0</errorConditionFormula>
    <errorDisplayField>Rent__c</errorDisplayField>
    <errorMessage>The rent amount should be greater than zero.</errorMessage>
</ValidationRule>