force-app/main/default/objects/Property__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Host__c</columns>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Property_ID__c</columns>
    <columns>Max_Occupancy__c</columns>
    <columns>Current_Occupancy__c</columns>
    <columns>Rent__c</columns>
    <columns>Rent_Type__c</columns>
    <columns>Average_Rating__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>